# LiteLLM_sample

./: .env.sample  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
LiteLLM_sample/: compare_sample.py  fallback_sample.py
